--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "mongodb": "^4.6.0",
     "react": "^16.8.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^16.8.6",
