--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^5.1.3",
     "mongodb": "^4.6.0",
     "react": "^16.8.6",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
